welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  retourne()
  ^DwarfCode:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(!estSurBiscuit() || !estFaceMur())
  ^DwarfCode:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^DwarfCode:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  prendBiscuit()
  ^DwarfCode:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return porteBiscuit
  ^